# entrouter-universal

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: chain.rs  compress.rs  envelope.rs  guardian.rs  lib.rs  main.rs  mcp.rs  signed_envelope.rs  universal_struct.rs  verify.rs
tests/: test.rs
