[package]
name = "entrouter-universal"
version = "0.9.3"
edition = "2021"
rust-version = "1.63"
description = "Pipeline integrity guardian - what goes in, comes out identical."
license = "Apache-2.0"
authors = ["John Aron Keeney"]
repository = "https://github.com/Entrouter/entrouter-universal"
readme = "README.md"
keywords = ["integrity", "base64", "sha256", "encoding", "verification"]
categories = ["encoding", "cryptography"]

[[bin]]
name = "entrouter"
path = "src/main.rs"

[features]
default = ["compression"]
compression = ["flate2"]

[dependencies]
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
hmac = "0.12"
flate2 = { version = "1.0", optional = true }
